<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
   Schema::create('programs', function (Blueprint $table) {
    $table->id();
    $table->string('code')->unique(); // e.g. BSIT
    $table->string('name');
    $table->text('description')->nullable();
    $table->integer('years')->default(4); // <<-- added
    $table->longText('possible_projects')->nullable();
    $table->longText('possible_careers')->nullable();
    $table->timestamps();
});

    }

    public function down(): void
    {
        Schema::dropIfExists('programs');
    }
};
